# SimilarProjectRating

./: .editorconfig  .gitignore  GITREVERSE_SUMMARY.md  README.md  fix_syntax.py  pyproject.toml  test_gitreverse_integration.py  test_resume_parallel.py
.codebuddy/plans/: similar-project-rating-impl_ceae44da.md
.github/workflows/: ci.yml
configs/: config.yaml  scoring_weights.yaml
data/cache/: .gitkeep
data/results/: .gitkeep
docs/: design_spec.md  gitreverse_usage.md  resume_parallel_features.md
ideas/: basic.md
logs/: .gitkeep
plans/: implementation-plan.md
requirements/: ai.txt  base.txt  dev.txt
scripts/: env_check.py
src/: __init__.py  main.py
src/ai/: __init__.py  explainer.py  llm_client.py  prompts.py  recommendation_templates.py  recommender.py
src/ai/providers/: __init__.py  base.py  litellm_provider.py  ollama_provider.py  openai_provider.py
src/analysis/: __init__.py  adaptive_pipeline.py  code_analyzer.py  community_analyzer.py  maturity_analyzer.py  pipeline.py  pipeline_parallel.py  prompt_analyzer.py
src/models/: __init__.py  analysis.py  common.py  metrics.py  repository.py  search.py  session.py  session.py.backup
src/pipeline/: __init__.py  orchestrator.py  orchestrator_resume.py
src/report/: __init__.py  generator.py  markdown_exporter.py
src/scoring/: __init__.py  ranking_engine.py  score_calculator.py
src/search/: __init__.py  github_client.py  gitreverse_client.py  keyword_generator.py  project_filter.py
src/storage/: __init__.py  database.py  file_manager.py
src/utils/: __init__.py  cache.py  config.py  environment_checker.py  git_helper.py  logger.py  resume_manager.py  session_manager.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tools/: auto_commit_initial.py
